syntax = "proto3";

package ASC.Core.Billing;

message TariffCacheItem {
    int32 tenant_id = 1;
}